# dvaar

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  EXPLANATION.md  README.md  SCRIPTS.md
.github/workflows/: deploy.yml  release.yml
docker/: Caddyfile  Dockerfile  docker-compose.yml
dvaar_cli/: Cargo.toml
dvaar_cli/src/: config.rs  main.rs  metrics.rs  update.rs
dvaar_cli/src/commands/: billing.rs  http.rs  login.rs  mod.rs  session.rs  uninstall.rs  update.rs
dvaar_cli/src/inspector/: client.rs  html.rs  mod.rs  port.rs  server.rs  store.rs
dvaar_cli/src/tui/: app.rs  mod.rs  ui.rs
dvaar_cli/src/tunnel/: client.rs  mod.rs
dvaar_common/: Cargo.toml
dvaar_common/src/: lib.rs
dvaar_server/: Cargo.toml
dvaar_server/migrations/: 20240101000000_init.sql  20240102000000_custom_domains.sql  20240103000000_plans.sql
dvaar_server/src/: config.rs  db.rs  main.rs  redis.rs
dvaar_server/src/abuse/: blocklist.rs  mod.rs  rate_limit.rs
dvaar_server/src/routes/: admin.rs  auth.rs  billing.rs  ingress.rs  mod.rs  proxy.rs  tunnel.rs
dvaar_server/src/services/: mod.rs
dvaar_site/: next.config.mjs  package.json  pnpm-lock.yaml
dvaar_site/src/app/: globals.css  page.tsx
dvaar_site/src/components/: aurora-text.tsx  feature-selector.tsx  mobile-drawer.tsx  section.tsx
dvaar_site/src/components/sections/: community.tsx  cta.tsx  examples.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  pricing.tsx  statistics.tsx  use-cases.tsx
dvaar_site/src/lib/: config.tsx
scripts/: add-edge-node.sh  install.ps1  install.sh  setup-origin-certs.sh  setup-server.sh
