[workspace]
resolver = "2"
members = ["dvaar_common", "dvaar_server", "dvaar_cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dvaar Team"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rmp-serde = "1.3"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Redis
fred = { version = "10.0", features = ["subscriber-client"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# WebSocket client
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1"
rand = "0.8"
base64 = "0.22"
dirs = "6.0"
open = "5.3"
bytes = "1.9"
http = "1.2"
http-body-util = "0.1"
once_cell = "1.20"

# Crypto (for Stripe webhook verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
