[package]
name = "dvaar_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for Dvaar tunneling service"

[[bin]]
name = "dvaar"
path = "src/main.rs"

[dependencies]
dvaar_common = { path = "../dvaar_common" }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# WebSocket client
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# HTTP client & server (for login callback + static file serving)
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }

# Process management
nix = { version = "0.29", features = ["signal", "process"] }

# Interactive prompts & beautiful CLI
cliclack = "0.3"
console = "0.15"
