[package]
name = "dvaar_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared protocol library for Dvaar tunneling service"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
