[package]
name = "dvaar_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Distributed edge node server for Dvaar tunneling service"

[dependencies]
dvaar_common = { path = "../dvaar_common" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
fred = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client (for node-to-node proxy)
reqwest = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
